# miako-app-mvp

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  execute.py  main.py  mypy.ini  pyproject.toml  requirements.txt
_legacy_flow_main/: flow_chatbot.py  simple_flow.py  vector_connection_v1.py  vector_connection_v2.py  vector_memory_store_v1.py
_legacy_multi_agent_workflow/config/: agents.yaml
_legacy_multi_agent_workflow/crewai_crew/: crew.py
core/: config.py  security.py
crewai_flows/: main_flow.py  test_flow.py
crewai_flows/flow_main/: flow_chatbot.py  query_chat_history.py  sample_logger.py  vector.py  vector_connection.py  vector_memory_store.py
databases/: database.py
llm_workflow/: test_flow.py
llm_workflow/_legacy_flow_main/: vector_memory_store.py
llm_workflow/chat_completions/: groq_llm.py
llm_workflow/config_files/: config.py  locking.py
llm_workflow/flow_main/: flow_chatbot.py
llm_workflow/llm/: groq_llm.py
llm_workflow/memory/long_term_memory/: memory_store.py
llm_workflow/memory/short_term_memory/: _fake_memory_testing.py  message_cache.py
llm_workflow/prompts/: language.yaml.txt  prompt_library.py  prompts.yaml.txt
llm_workflow/prompts/data_sources/: intent.yaml  language.yaml  prompts.yaml
llm_workflow/storage/: message_cache.py
llm_workflow/vector_store/: vector_connection.py  vector_memory_store.py
llm_workflow/vector_stores/: vector_connection.py  vector_memory_store.py
llm_workflow/workflow/: flow_chatbot.py
llm_workflow/workflows/: base.py  concurrent_simulator_chatbot.py  executor.py  flow_chatbot.py  flows.py  main_workflow.py  protocol.py  simple_flow.py
llm_workflow/workflows/steps/: intent_step.py  language_step.py  language_step_alternative.py
migrations/: env.py
migrations/versions/: 4f6b1b225be6_init_db.py
models/: __init__.py  conversation_model.py  message_model.py  user_model.py
multi_agent_workflow/: README.md  multi_agent_orchestrator.py
multi_agent_workflow/config/: agents.yaml  tasks.yaml
multi_agent_workflow/crewai_crew/: crew.py
multi_agent_workflow/llms/: custom_llm_for_crewai.py
multi_agent_workflow/src/multi_agent_workflow/: crew.py  main.py
routers/: auth_router.py  llm_workflow_router.py  message_router.py
schemas/: conversation_schema.py  message_schema.py  user_schema.py
src/llm_workflow/llm/: groq_llm.py
src/llm_workflow/workflows/: _executor_protocol_test.py  concurrent_simulator_chatbot.py  flows.py  single_user_simulator_chatbot.py
src/models/: __init__.py  conversation_model.py  message_model.py  user_model.py
src/routers/: auth_router.py  llm_workflow_router.py  message_router.py
src/schemas/: user_schema.py
tests/: conftest.py  test_check_properties_of_vector_to_alter_or_not.py  test_models.py  vector_test.py
(+5 files in other folders)
