[project]
name = "miako-app-mvp"
version = "0.1.0"
description = """**Mirai Aiko** (shortened to **Miako** for the domain and branding)
 – MVP demo of the AI assistant app. Private build for early testing with core features only."""
requires-python = ">=3.13, <3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "azure-ai-projects>=2.0.1",
    "cachetools>=6.2.4",
    "crewai>=1.14.2",
    "fastapi>=0.136.0",
    "groq>=1.2.0",
    "langgraph>=1.1.8",
    "llama-index>=0.14.20",
    "llama-index-embeddings-cohere>=0.8.0",
    "llama-index-vector-stores-milvus>=1.1.0",
    "loguru>=0.7.3",
    "mypy>=1.19.1",
    "passlib[argon2]>=1.7.4",
    "pytest-asyncio>=1.3.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.26",
    "redis>=7.4.0",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.44.0",
]
